<resources>
    <string name="app_name">CoroutineSample</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- Strings used for buttons -->
    <string name="basic_test">Basic Test</string>
    <string name="lifecycle_scope">LifecycleScope</string>
    <string name="global_scope">GlobalScope</string>
    <string name="coroutine_scope">CoroutineScope</string>
    <string name="supervisor_scope">SupervisorScope</string>
    <string name="handler_exception">Handler Exception</string>
    <string name="two_tasks">Two Tasks</string>
    <string name="two_async">Two Async</string>

    <string name="repeat_on_lifecycle_test">repeatOnLifecycle Test</string>

    <string name="channel_test">Channel Test</string>
    <string name="channel_basic">Channel basics</string>
    <string name="channel_producers">Building channel producers</string>
    <string name="channel_pipeline">Prime numbers with pipeline</string>
    <string name="channel_fair">Channels are fair</string>

    <string name="flow_test">Flow Test</string>
    <string name="flow_basic">Flow basics</string>
    <string name="flow_cancellation">Flow cancellation</string>
    <string name="flow_operators">Flow operators</string>
    <string name="flow_on">Flow on</string>
    <string name="flow_buffering">Flow buffering</string>
    <string name="flow_exceptions">Flow exceptions</string>
</resources>