<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".basic.BasicTestActivity"
    android:background="@color/gray">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <Button
            android:id="@+id/btn_lifecycle_scope"
            android:text="@string/lifecycle_scope"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:textAllCaps="false"
            app:backgroundTint="@null"
            android:background="@drawable/btn_white"/>
        <Button
            android:id="@+id/btn_global_scope"
            android:text="@string/global_scope"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:textAllCaps="false"
            app:backgroundTint="@null"
            android:background="@drawable/btn_white"/>
        <Button
            android:id="@+id/btn_coroutine_scope"
            android:text="@string/coroutine_scope"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:textAllCaps="false"
            app:backgroundTint="@null"
            android:background="@drawable/btn_white"/>
        <Button
            android:id="@+id/btn_supervisor_scope"
            android:text="@string/supervisor_scope"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:textAllCaps="false"
            app:backgroundTint="@null"
            android:background="@drawable/btn_white"/>
        <Button
            android:id="@+id/btn_handler_exception"
            android:text="@string/handler_exception"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:textAllCaps="false"
            app:backgroundTint="@null"
            android:background="@drawable/btn_white"/>
        <Button
            android:id="@+id/btn_two_tasks"
            android:text="@string/two_tasks"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:textAllCaps="false"
            app:backgroundTint="@null"
            android:background="@drawable/btn_white"/>
        <Button
            android:id="@+id/btn_two_async"
            android:text="@string/two_async"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:textAllCaps="false"
            app:backgroundTint="@null"
            android:background="@drawable/btn_white"/>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>