<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".flow.FlowTestActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_flow_basic"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/btn_white"
            android:text="@string/flow_basic"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/btn_flow_cancellation"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/btn_white"
            android:text="@string/flow_cancellation"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/btn_flow_operators"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/btn_white"
            android:text="@string/flow_operators"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/btn_flow_on"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/btn_white"
            android:text="@string/flow_on"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/btn_flow_buffering"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/btn_white"
            android:text="@string/flow_buffering"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/btn_flow_exceptions"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/btn_white"
            android:text="@string/flow_exceptions"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:backgroundTint="@null" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>