<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".channel.ChannelActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <Button
            android:id="@+id/btn_channel_basic"
            android:text="@string/channel_basic"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:textAllCaps="false"
            app:backgroundTint="@null"
            android:background="@drawable/btn_white"/>
        <Button
            android:id="@+id/btn_channel_producers"
            android:text="@string/channel_producers"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:textAllCaps="false"
            app:backgroundTint="@null"
            android:background="@drawable/btn_white"/>
        <Button
            android:id="@+id/btn_channel_pipeline"
            android:text="@string/channel_pipeline"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:textAllCaps="false"
            app:backgroundTint="@null"
            android:background="@drawable/btn_white"/>
        <Button
            android:id="@+id/btn_channel_fair"
            android:text="@string/channel_fair"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:textAllCaps="false"
            app:backgroundTint="@null"
            android:background="@drawable/btn_white"/>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>