<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/gray">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <Button
            android:id="@+id/btn_test"
            android:text="@string/basic_test"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:textAllCaps="false"
            app:backgroundTint="@null"
            android:background="@drawable/btn_white"/>
        <Button
            android:id="@+id/btn_repeat_on_lifecycle_test"
            android:text="@string/repeat_on_lifecycle_test"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:textAllCaps="false"
            app:backgroundTint="@null"
            android:background="@drawable/btn_white"/>
        <Button
            android:id="@+id/btn_channel_test"
            android:text="@string/channel_test"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:textAllCaps="false"
            app:backgroundTint="@null"
            android:background="@drawable/btn_white"/>
        <Button
            android:id="@+id/btn_flow_test"
            android:text="@string/flow_test"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:textAllCaps="false"
            app:backgroundTint="@null"
            android:background="@drawable/btn_white"/>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>